=========
Changelog
=========

Version 4.11.64  (for WoW Classic)  April ??, 2020

- TOC updated to 11304.
- Updates to Spanish localization by Woopy.
- Corrected item quality color for UBRS: The Demon Forge.  Reported by Woopy.




Version 4.11.63  (for WoW Classic)  March 20, 2020

- Updates to Spanish localization by Woopy.
- Updates to German localization by Guldukat.



Version 4.11.62  (for WoW Classic)  February 24, 2020

- Updates to Spanish localization by Woopy.
- Added Traditional Chinese localization provided by Woopy.



Version 4.11.61  (for WoW Classic)  January 19, 2020

- Updates to Spanish localization by Woopy.
- Fixed "Holy Mightstone" quest reward color for Sunken Temple: Forging The Mightstone.  Reported by Woopy.
- Copied "Attunement to the Core" quest to Molten Core.  Recommended by Guldukat.



Version 4.11.60  (for WoW Classic)  January 16, 2020

- Compatibility updates to work with new version of Atlas.
- Updates to Spanish localization by Woopy.
- Updates to German localization by Guldukat.
- Updated boss location numbers for Lower & Upper Blackrock Spire to conform with new Atlas update.




Version 4.11.59  (for WoW Classic)  December 31, 2019

- TOC updated to 11303.
- Updates to Spanish localization by Woopy.
- Updates to German localization by Guldukat.
- "The God Hakkar" Horde quest reward was missing.  Reported by Woopy.




Version 4.11.58  (for WoW Classic)  December 10, 2019

- Russian localization updated by GoodDeath.
- German localization updated by Guldukat.
- Spanish localization updated by Woopy.
- Fixes in Sunken Temple quests (thanks Guldukat)

- Cleanup Progress:
	- Blackfathom Deeps complete.
	- Dire Maul East complete.
	- Dire Maul North complete.
	- Dire Maul West complete.
	- Maraudon complete.
	- Razorfen Downs complete.
	- Razorfen Kraul complete.
	- Wailing Caverns complete.
	- Zul'Farrak complete.
	- Molten Core complete.
	- Onyxia's Lair complete.
	- Zul'Gurub complete.
	- The Ruins of Ahn'Qiraj complete.