@@ -6,7 +6,8 @@ Version 4.11.64  (for WoW Classic)  April ??, 2020
 
 - TOC updated to 11304.
 - Updates to Spanish localization by Woopy.
-- Corrected item quality color for UBRS: The Demon Forge.  Reported by Woopy.
+- Bug Fix: UBRS "The Demon Forge" quest reward colors were wrong on Horde side.  Reported by Woopy.
+- Bug Fix: Stratholme "Deadman's Plea" was not showing quest reward on Horde side.  Reported by Woopy.
 
 
 
